--- a/frontend/all_years_dashboard.html
+++ b/frontend/all_years_dashboard.html
@@ -54,7 +54,7 @@
     }
 
     // Render a table with yearly totals across multiple years
-    function buildTable(id, data, years){
+    function buildTable(id, data, years, colorClasses){
         const el = document.getElementById(id);
         el.innerHTML = '';
 
@@ -69,7 +69,19 @@
         }));
 
         const columns = [
-            { title: 'Name', field: 'name', bottomCalc: () => 'Total' },
+            {
+                title: 'Name',
+                field: 'name',
+                bottomCalc: () => 'Total',
+                formatter: function(cell){
+                    const value = cell.getValue();
+                    const badge = createBadge(value, colorClasses);
+                    const link = document.createElement('a');
+                    link.href = `search.html?value=${encodeURIComponent(value)}`;
+                    link.appendChild(badge);
+                    return link;
+                }
+            },
             ...yearCols,
             { title: 'Total', field: 'total', formatter: 'money', formatterParams: { symbol: '£', precision: 2 }, hozAlign: 'right', bottomCalc: 'sum', bottomCalcFormatter: totalFormatter }
         ];
@@ -151,12 +163,12 @@
         fetch('../php_backend/public/all_years_dashboard.php')
             .then(resp => resp.json())
             .then(data => {
-                buildTable('tags-table', data.tags, data.years);
+                buildTable('tags-table', data.tags, data.years, 'bg-blue-200 text-blue-800');
                 buildChart('tags-chart', 'Tag Totals', data.tags);
-                buildTable('categories-table', data.categories, data.years);
+                buildTable('categories-table', data.categories, data.years, 'bg-green-200 text-green-800');
                 buildChart('categories-chart', 'Category Totals', data.categories);
                 buildDonutCharts('category-tag-income', 'category-tag-outgoings', data.categories, data.tags);
-                buildTable('groups-table', data.groups, data.years);
+                buildTable('groups-table', data.groups, data.years, 'bg-purple-200 text-purple-800');
                 buildChart('groups-chart', 'Group Totals', data.groups);
             });
     });
