--- a/frontend/monthly_dashboard.html
+++ b/frontend/monthly_dashboard.html
@@ -76,7 +76,7 @@
     }
 
     // Render a table showing daily totals for the month
-    function buildTable(id, data, days){
+    function buildTable(id, data, days, colorClasses){
         const el = document.getElementById(id);
         el.innerHTML = '';
 
@@ -91,7 +91,19 @@
         }));
 
         const columns = [
-            { title: 'Name', field: 'name', bottomCalc: () => 'Total' },
+            {
+                title: 'Name',
+                field: 'name',
+                bottomCalc: () => 'Total',
+                formatter: function(cell){
+                    const value = cell.getValue();
+                    const badge = createBadge(value, colorClasses);
+                    const link = document.createElement('a');
+                    link.href = `search.html?value=${encodeURIComponent(value)}`;
+                    link.appendChild(badge);
+                    return link;
+                }
+            },
             ...dayCols,
             { title: 'Total', field: 'total', formatter: 'money', formatterParams: { symbol: '£', precision: 2 }, hozAlign: 'right', bottomCalc: 'sum', bottomCalcFormatter: totalFormatter }
         ];
@@ -183,12 +195,12 @@
 
                 const days = new Date(year, month, 0).getDate();
 
-                buildTable('tags-table', data.tags, days);
+                buildTable('tags-table', data.tags, days, 'bg-blue-200 text-blue-800');
                 buildChart('tags-chart', 'Tag Totals', data.tags);
-                buildTable('categories-table', data.categories, days);
+                buildTable('categories-table', data.categories, days, 'bg-green-200 text-green-800');
                 buildChart('categories-chart', 'Category Totals', data.categories);
                 buildDonutCharts('category-tag-income', 'category-tag-outgoings', data.categories, data.tags);
-                buildTable('groups-table', data.groups, days);
+                buildTable('groups-table', data.groups, days, 'bg-purple-200 text-purple-800');
                 buildChart('groups-chart', 'Group Totals', data.groups);
             });
     }
