--- a/frontend/tags.html
+++ b/frontend/tags.html
@@ -56,7 +56,8 @@ async function loadTags(){
                 const t = cell.getRow().getData();
                 const container = document.createElement('div');
                 const edit = document.createElement('button');
-                edit.textContent = 'Edit';
+                edit.innerHTML = '<i class="fa-solid fa-pen"></i>';
+                edit.setAttribute('aria-label','Edit');
                 edit.className = 'bg-blue-600 text-white px-2 py-1 rounded mr-2';
                 edit.addEventListener('click', async () => {
                     const name = prompt('Tag Name', t.name);
@@ -74,7 +75,8 @@ async function loadTags(){
                     showMessage('Tag updated');
                 });
                 const del = document.createElement('button');
-                del.textContent = 'Delete';
+                del.innerHTML = '<i class="fa-solid fa-trash"></i>';
+                del.setAttribute('aria-label','Delete');
                 del.className = 'bg-red-600 text-white px-2 py-1 rounded';
                 del.addEventListener('click', async () => {
                     if (!confirm('Delete this tag?')) return;
