--- a/frontend/transfers.html
+++ b/frontend/transfers.html
@@ -17,11 +17,17 @@
         <nav id="menu" class="w-64 flex-shrink-0 bg-white border-r p-6"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6 space-y-6">
             <section>
-                <h1 class="text-2xl font-semibold mb-4">Detected Transfers</h1>
+                <h1 class="text-2xl font-semibold mb-4 flex items-center justify-between">
+                    Detected Transfers
+                    <button id="assist-btn" class="bg-indigo-600 text-white px-3 py-1 rounded text-sm"><i class="fa-solid fa-wand-magic-sparkles mr-1"></i>Assist</button>
+                </h1>
                 <div id="transfers-table"></div>
             </section>
             <section>
-                <h2 class="text-xl font-semibold mb-4">OFX Marked Transfers</h2>
+                <h2 class="text-xl font-semibold mb-4 flex items-center justify-between">
+                    OFX Marked Transfers
+                    <button id="mark-all" class="bg-green-600 text-white px-3 py-1 rounded text-sm"><i class="fa-solid fa-check-double mr-1"></i>Mark All</button>
+                </h2>
                 <div id="ofx-transfers-table"></div>
             </section>
             <section>
@@ -39,6 +45,22 @@
     <script src="https://unpkg.com/tabulator-tables@6.3.0/dist/js/tabulator.min.js"></script>
     <script src="js/tabulator-tailwind.js"></script>
     <script>
+    function markTransfers(ids){
+        fetch('../php_backend/public/mark_transfer.php', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ ids: ids })
+        })
+        .then(resp => resp.json())
+        .then(res => {
+            if(res.status === 'ok') {
+                location.reload();
+            } else {
+                alert(res.error || 'Failed to mark transfers');
+            }
+        });
+    }
+
     fetch('../php_backend/public/transfers.php')
         .then(resp => resp.json())
         .then(data => {
@@ -61,10 +83,27 @@
                     { title: 'Date', field: 'date' },
                     { title: 'Description', field: 'description' },
                     { title: 'Account', field: 'account_name', formatter: function(cell){ const row = cell.getRow().getData(); return `<a href="transaction.html?id=${row.id}">${cell.getValue()}</a>`; } },
-                    { title: 'Amount', field: 'amount', formatter: 'money', formatterParams: { symbol: '£', precision: 2 }, hozAlign: 'right' }
+                    { title: 'Amount', field: 'amount', formatter: 'money', formatterParams: { symbol: '£', precision: 2 }, hozAlign: 'right' },
+                    { title: 'Mark', formatter: function(){ return '<button class="bg-green-600 text-white px-2 py-1 rounded text-sm"><i class="fa-solid fa-check"></i></button>'; }, width: 90, hozAlign: 'center', cellClick: function(e, cell){ markTransfers([cell.getRow().getData().id]); } }
                 ]
             });
+
+            document.getElementById('mark-all').addEventListener('click', function(){
+                markTransfers(data.ofx_transfers.map(t => t.id));
+            });
         });
+
+    document.getElementById('assist-btn').addEventListener('click', function(){
+        fetch('../php_backend/public/assist_transfers.php', { method: 'POST' })
+        .then(resp => resp.json())
+        .then(res => {
+            if(res.status === 'ok') {
+                location.reload();
+            } else {
+                alert(res.error || 'Assist failed');
+            }
+        });
+    });
 
     document.getElementById('link-form').addEventListener('submit', function(e){
         e.preventDefault();
